--- a/DxReadinessSolution.Business/DxReadinessSolution.Business.csproj
+++ b/DxReadinessSolution.Business/DxReadinessSolution.Business.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ExceptionHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Verifiers\ByteStreamVerifier.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DxReadinessSolution.Domain\DxReadinessSolution.Domain.csproj">
