--- a/DxReadinessSolution.Domain/DxReadinessSolution.Domain.csproj
+++ b/DxReadinessSolution.Domain/DxReadinessSolution.Domain.csproj
@@ -40,9 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IByteStreamVerifier.cs" />
     <Compile Include="Contracts\IExceptionHandler.cs" />
     <Compile Include="Contracts\IImageAnalyzer.cs" />
     <Compile Include="Contracts\ILogger.cs" />
+    <Compile Include="Contracts\IVerifier.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
