Added an actor for Image Analysis

--- a/DxReadinessSolution.Domain/DxReadinessSolution.Domain.csproj
+++ b/DxReadinessSolution.Domain/DxReadinessSolution.Domain.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Contracts\IImageAnalyzer.cs" />
     <Compile Include="Contracts\ILogger.cs" />
     <Compile Include="Contracts\IVerifier.cs" />
-    <Compile Include="Entities\Person.cs" />
+    <Compile Include="Entities\ImageResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
