--- a/DxReadinessSolution.Data.ImageRecognition/DxReadinessSolution.Data.ImageRecognition.csproj
+++ b/DxReadinessSolution.Data.ImageRecognition/DxReadinessSolution.Data.ImageRecognition.csproj
@@ -69,9 +69,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DxReadinessSolution.Business\DxReadinessSolution.Business.csproj">
+      <Project>{6ADD7043-CEA3-458F-9814-A6DA7E42167F}</Project>
+      <Name>DxReadinessSolution.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DxReadinessSolution.Domain\DxReadinessSolution.Domain.csproj">
       <Project>{A68C1CC3-BF4B-423C-B325-0D50706AF7CE}</Project>
       <Name>DxReadinessSolution.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DxReadinessSolution.Fakes\DxReadinessSolution.Fakes.csproj">
+      <Project>{D3C0C59C-A492-419A-82E8-F456B3D3D948}</Project>
+      <Name>DxReadinessSolution.Fakes</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
