--- a/DxReadinessSolution.Domain/DxReadinessSolution.Domain.csproj
+++ b/DxReadinessSolution.Domain/DxReadinessSolution.Domain.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Contracts\IByteStreamVerifier.cs" />
     <Compile Include="Contracts\IExceptionHandler.cs" />
     <Compile Include="Contracts\IImageAnalyzer.cs" />
+    <Compile Include="Contracts\IImageAnalyzerService.cs" />
     <Compile Include="Contracts\ILogger.cs" />
     <Compile Include="Contracts\IVerifier.cs" />
     <Compile Include="Entities\ImageResult.cs" />
