--- a/DxReadinessSolution.Business/DxReadinessSolution.Business.csproj
+++ b/DxReadinessSolution.Business/DxReadinessSolution.Business.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converters\StreamToByteConverter.cs" />
     <Compile Include="ExceptionHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Verifiers\ByteStreamVerifier.cs" />
