--- a/DxReadinessSolution.Data.ImageRecognition.Test/packages.config
+++ b/DxReadinessSolution.Data.ImageRecognition.Test/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentAssertions" version="4.8.0" targetFramework="net452" />
   <package id="Microsoft.ProjectOxford.Vision" version="1.0.296.0" targetFramework="net452" />
+  <package id="Moq" version="4.0.10827" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Should" version="1.1.20" targetFramework="net452" />
 </packages>
